--- a/dtmoney/package.json
+++ b/dtmoney/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "miragejs": "^0.1.41",
+    "polished": "^4.1.1",
     "react": "^17.0.2",
+    "react-app": "^1.1.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
@@ -18,7 +22,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.12.0",
     "@types/styled-components": "^5.1.9",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   },
   "scripts": {
